fixes header problem, and share screen visibility on android

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2639,7 +2639,7 @@ canvas {
 }
 
 .page-action {
-  margin-top: 48px;
+  margin-top: 20px;
 }
 
 .page-action__info {
